# rh6

./: README.md  generate_certificates.sh
backend/: Dockerfile  Jenkinsfile-ria  Jenkinsfile-zap  docker-compose.yml  pom.xml
backend/api/: admin.yml  swagger.yml
backend/auth-service/: pom.xml
backend/config/: 909.p12d
backend/doc/: Architectural description.md  (+1 more)
doc/: API.md  ARCHITECTURE.md  INSTALL.md  KNOWN_ISSUES.md  OWASP_ZAP_report.html  REQUIREMENTS_CHECKLIST.md  SESSIONS.md  TEST_AUTOMATION_README.md
front/: .env  .eslintrc.js  .gitignore  Dockerfile  Jenkinsfile-ria  TODO.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json  vue.config.js
infra/: rsyslog-services.conf
ria-qa/: .dockerignore  .gitignore  Dockerfile  Dockerfile-introduct  Jenkinsfile-ria  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
ria-qa/config/: browsers.json  env.cfg  logging.json
ria-qa/constants/: constants.py
ria-qa/core/: logger.py  project.py  project_config.py
ria-qa/helpers/: utils.py
ria-qa/src/web/: app.py
ria-qa/src/web/pages/login/: login_page.py  login_role_page.py
ria-qa/src/web/pages/login/content/: base_sign_in_tab.py  header.py  tab_mobile_id.py  tab_smart_id.py
ria-qa/src/web/pages/mailbox/: mailbox_page.py
ria-qa/src/web/pages/mailbox/content/: base_tab.py  header.py  message_row.py  message_view.py  tab_inbox.py  tab_new_message.py  tab_outbox.py
ria-qa/test_data/users/: model.py  users.py
ria-qa/tests/: __init__.py  conftest.py
ria-qa/tests/web/: conftest.py  test_mail_box.py
(+297 files in other folders)
